--- a/overview.html
+++ b/overview.html
@@ -145,7 +145,7 @@
       <div class="tabs container">
         <ul>
           <li class="col-4 active-tab wrapper-tab-comets">
-            <span class="text">OurSolarSystem</span>
+            <span class="text">OVERVIEW</span>
           </li>
           <li class="col-4 wrapper-tab-comets">
             <span class="text">IN DEPTH</span>
@@ -669,11 +669,21 @@
             <div class="carousel-item active">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1838_wispr_venus_image_640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1838_wispr_venus_image_640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        This was the first direct measurement of the Venusian
+                        atmosphere in nearly 30 years — and it looks quite
+                        different from Venus past.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Parker Solar Probe Discovers Natural Radio Emission
                     in Venus' Atmosphere
@@ -682,11 +692,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1836_First_selfie_animation-640x480.gif"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1836_First_selfie_animation-640x480.gif"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        Ingenuity will explore how aerial scouting and other
+                        functions could benefit future exploration of Mars and
+                        other worlds.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Ingenuity Mars Helicopter to Begin New Demonstration
                     Phase
@@ -695,11 +715,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1837_atmospheric_rivers.640x480.gif"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1837_atmospheric_rivers.640x480.gif"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        Windy regions high in the atmosphere can transport
+                        pollutants like dust or soot thousands of miles around
+                        the world and disrupt everyday life.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     In a First, Scientists Map Particle-Laden Rivers in the Sky
                   </p>
@@ -710,11 +740,21 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1832_img_0747_scientific-balloon-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1832_img_0747_scientific-balloon-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        A suite of scientific balloons is about to lift off
+                        carrying instruments that will help scientists
+                        understand the connection between the Sun and Earth.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Lofted by NASA Balloons, New Experiments Will Study
                     Sun-Earth System
@@ -723,11 +763,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1831_OSIRIS-REx-MOM-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1831_OSIRIS-REx-MOM-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        Nayi Castro serves as OSIRIS-REx mission operations
+                        manager or "MOM” for short. She shares her thoughts on
+                        OSIRIS-REx leaving Bennu.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     OSIRIS-REx 'MOM' Says Goodbye to an Asteroid
                   </p>
@@ -735,11 +785,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1827_PIA24624_Ingenuity_Flight_Three-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1827_PIA24624_Ingenuity_Flight_Three-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The third flight was conducted at speeds and distances
+                        beyond what had ever been previously demonstrated, even
+                        in testing on Earth.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Ingenuity Mars Helicopter Flies Faster, Farther on
                     Third Flight
@@ -751,11 +811,21 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1823_manicouagan-impact-crater-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1823_manicouagan-impact-crater-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        Members of NASA’s Planetary Defense Coordination Office
+                        will participate in a “tabletop exercise” to simulate an
+                        asteroid impact scenario.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA to Participate in Tabletop Exercise Simulating Asteroid
                     Impact
@@ -764,11 +834,20 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1822_moxie_being_installed_in_perseverance-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1822_moxie_being_installed_in_perseverance-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        A toaster-size, experimental instrument aboard
+                        Perseverance called the MOXIE accomplished the task.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Perseverance Mars Rover Extracts First Oxygen from
                     Red Planet
@@ -777,11 +856,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1818_49641911586_4d26910aba_supermoon_March_2020-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1818_49641911586_4d26910aba_supermoon_March_2020-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The next full Moon will be the Pink Supermoon, on Monday
+                        night April 26, 2021. It will appear full from Sunday
+                        night through Wednesday morning.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     The Next Full Moon Is a "Supermoon" Pink Moon
                   </p>
