--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -263,17 +263,6 @@
               class="carousel slide container"
               data-ride="carousel"
             >
-              <!-- <ul class="carousel-indicators">
-        <li
-          data-target="#carousel-overview"
-          data-slide-to="0"
-          class="active"
-        ></li>
-        <li data-target="#carousel-overview" data-slide-to="1"></li>
-        <li data-target="#carousel-overview" data-slide-to="2"></li>
-        <li data-target="#carousel-overview" data-slide-to="3"></li>
-        <li data-target="#carousel-overview" data-slide-to="4"></li>
-      </ul> -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="col-12 carousel-info">
@@ -918,11 +907,21 @@
             <div class="carousel-item active">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1838_wispr_venus_image_640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1838_wispr_venus_image_640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        This was the first direct measurement of the Venusian
+                        atmosphere in nearly 30 years — and it looks quite
+                        different from Venus past.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Parker Solar Probe Discovers Natural Radio Emission
                     in Venus' Atmosphere
@@ -931,11 +930,20 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1812_Parker_Solar_Probe_Venus-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1812_Parker_Solar_Probe_Venus-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        NASA’s Parker Solar Probe has given scientists the first
+                        complete look at Venus’ orbital dust ring.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Parker Solar Probe Sees Venus Orbital Dust Ring in
                     1st Complete View
@@ -944,11 +952,20 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1721_Parker_wispr_venus_image-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1721_Parker_wispr_venus_image-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        NASA’s Parker Solar Probe captured stunning views of
+                        Venus during its close flyby of the planet in July 2020.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Parker Solar Probe Offers Stunning View of Venus
                   </p>
@@ -959,11 +976,21 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1715_Snow_Moon_320.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1715_Snow_Moon_320.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The next full Moon will be early Saturday morning, Feb.
+                        27 at 3:17 AM EST. The Moon will appear full from
+                        Thursday night through Sunday morning.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     The Next Full Moon is the Snow, Storm, and Hunger Moon
                   </p>
@@ -971,21 +998,39 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/10022_D2004_0630_D401_320.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/10022_D2004_0630_D401_320.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        JPL's lucky peanuts are an unofficial tradition at big
+                        mission events.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">What Are NASA's Lucky Peanuts?</p>
                 </a>
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1703_pia24315_05_guidedentry_2000-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1703_pia24315_05_guidedentry_2000-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        What to expect when the Mars 2020 Perseverance rover
+                        arrives at the Red Planet on Feb. 18, 2021.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     NASA's Next Mars Rover Is Ready for the Most Precise Landing
                     Yet
@@ -997,21 +1042,40 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1519_688_Venus_list.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1519_688_Venus_list.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        This page showcases our resources for those interested
+                        in learning more about Venus.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">Venus Resources</p>
                 </a>
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1674_Solar_Spacecraft_Unique_Views-640x480.gif"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1674_Solar_Spacecraft_Unique_Views-640x480.gif"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        They focus on our star, but three of NASA’s Sun-watching
+                        spacecraft have also captured unique views of the
+                        planets.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Unique Solar System Views from Sun-Watching Spacecraft
                   </p>
@@ -1019,11 +1083,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1620_Hubble_Exoplanet_HD_106906-b-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1620_Hubble_Exoplanet_HD_106906-b-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        A planet in an unlikely orbit around a double star 336
+                        light-years away may offer a clue to a mystery closer to
+                        home: the hypothesized "Planet Nine."
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Hubble Pins Down Weird Exoplanet with Far-Flung Orbit
                   </p>
