--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -472,11 +472,20 @@
             <div class="carousel-item active">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1731_Oort_Cloud_Illustration-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1731_Oort_Cloud_Illustration-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        A one-time visitor to our inner solar system is helping
+                        explain more about our own origins.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Comet Catalina Suggests Comets Delivered Carbon to Rocky
                     Planets
@@ -485,11 +494,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1722_hubble-trojan-comet-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1722_hubble-trojan-comet-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        A wayward young comet-like object orbiting among the
+                        giant planets has found a temporary parking place along
+                        the way.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Comet Makes a Pit Stop Near Jupiter's Asteroids
                   </p>
@@ -497,11 +516,20 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/10022_D2004_0630_D401_320.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/10022_D2004_0630_D401_320.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        JPL's lucky peanuts are an unofficial tradition at big
+                        mission events.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">What Are NASA's Lucky Peanuts?</p>
                 </a>
               </div>
@@ -510,11 +538,21 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1628_eclipsecometsoho2-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1628_eclipsecometsoho2-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        As Chile and Argentina witnessed the total solar eclipse
+                        on Dec. 14, 2020, a little tiny speck was flying past
+                        the Sun – a recently discovered comet.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Recently Discovered Comet Seen During 2020 Total Solar
                     Eclipse
@@ -523,21 +561,41 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1561_sungrazing_comet_parker-640x480.gif"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1561_sungrazing_comet_parker-640x480.gif"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        When scientists downlinked data from Parker Solar
+                        Probe's sixth orbit, there was a surprise waiting for
+                        them: a sungrazing comet.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">Two Views of a Sungrazing Comet</p>
                 </a>
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1520_Blue_Moon_Airplane_320.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1520_Blue_Moon_Airplane_320.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The next full Moon will be on Thursday afternoon, Oct.
+                        1, 2020. The Moon will appear full from Wednesday
+                        morning through Saturday morning.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     October 2020: The Next Full Moon is the Harvest Moon
                   </p>
@@ -548,11 +606,21 @@
             <div class="carousel-item">
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1507_Comet_-67P_Churyumov-Gerasimenko-640x480.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1507_Comet_-67P_Churyumov-Gerasimenko-640x480.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        NASA instruments aboard ESA's Rosetta mission helped
+                        reveal that comet 67P/Churyumov-Gerasimenko has its own
+                        aurora.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Comet Discovered to Have Its Own Northern Lights
                   </p>
@@ -560,11 +628,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1462_stsci-h-v2045a_neowise_grey-320x240.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1462_stsci-h-v2045a_neowise_grey-320x240.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        This is the first time Hubble has photographed a comet
+                        of this brightness at such resolution after this close
+                        of a pass by the Sun.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Hubble Snaps Close-Up of Celebrity Comet NEOWISE
                   </p>
@@ -572,11 +650,21 @@
               </div>
               <div class="col-4">
                 <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1421_2020-NK1_320.jpg"
-                    alt=""
-                  />
+                  <div class="box">
+                    <img
+                      class="img-fluid"
+                      src="https://solarsystem.nasa.gov/system/news_items/list_view_images/1421_2020-NK1_320.jpg"
+                      alt=""
+                    />
+                    <div class="box-content">
+                      <p>
+                        The Earth has one less asteroid to worry about thanks to
+                        the research of an international team of scientists at
+                        the Arecibo Observatory in Puerto Rico.
+                      </p>
+                    </div>
+                  </div>
+
                   <p class="text-center">
                     Arecibo Observatory Returns from Tropical Storm Isaias
                     Lockdown to Track Asteroid for NASA
