--- a/index.html
+++ b/index.html
@@ -127,46 +127,42 @@
           <li data-target="#carousel-1" data-slide-to="1"></li>
           <li data-target="#carousel-1" data-slide-to="2"></li>
           <li data-target="#carousel-1" data-slide-to="3"></li>
+          <li data-target="#carousel-1" data-slide-to="4"></li>
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              class="img-fluid"
-              src="https://wallpaperaccess.com/full/1219598.jpg"
-              alt="1"
-            />
+            <img class="img-fluid" src="assets/img/index/moon.jpg" alt="1" />
             <div class="carousel-caption">
-              <h3>1</h3>
-              <p>1</p>
+              <h3>Moon</h3>
+              <p>Moon</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              class="img-fluid"
-              src="https://i.pinimg.com/originals/72/e0/24/72e02480c7d7a007ebc3608950f27900.jpg"
-              alt="2"
-            />
+            <img class="img-fluid" src="assets/img/index/mercury.jpg" alt="2" />
             <div class="carousel-caption">
-              <h3>2</h3>
-              <p>2</p>
+              <h3>Mercury</h3>
+              <p>Mercury</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              class="img-fluid"
-              src="https://i.pinimg.com/originals/c8/35/d0/c835d0402b0ba3d1d72c8eb2c46c72cf.jpg"
-              alt="3"
-            />
+            <img class="img-fluid" src="assets/img/index/venus.jpg" alt="3" />
             <div class="carousel-caption">
-              <h3>3</h3>
-              <p>3</p>
+              <h3>Venus</h3>
+              <p>Venus</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://wallpaperaccess.com/full/304418.jpg" alt="4" />
+            <img src="assets/img/index/Earth.jpg" alt="4" />
             <div class="carousel-caption">
-              <h3>4</h3>
-              <p>4</p>
+              <h3>Earth</h3>
+              <p>Earth</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/index/mars.jpg" alt="5" />
+            <div class="carousel-caption">
+              <h3>Mars</h3>
+              <p>Mars</p>
             </div>
           </div>
         </div>
@@ -179,10 +175,23 @@
       </div>
     </div>
 
-    <!-- tab -->
-    <div class="lastest-news">lastest-news</div>
-
-    <div class="feature-news">feature-news</div>
+    <div class="more-bar more-bar-overview">
+      <a href="#tab"> MORE <i class="fas fa-angle-down"></i> </a>
+    </div>
+    <div class="ten-thing-home">
+      <p>hihi</p>
+    </div>
+    <div class="feature-home">
+      <div class="feature-content container">
+        <h6>FEATURED</h6>
+        <h2>First Aerial Color Image of Mars</h2>
+        <p>
+          Ingenuity captured the first color image of the Martian surface taken
+          by an aerial vehicle.
+        </p>
+        <a class="btn btn-primary" href="#" role="button">Read More</a>
+      </div>
+    </div>
 
     <div class="footer">
       <h2 class="destinations-title">More Destinations</h2>
