--- a/index.html
+++ b/index.html
@@ -127,17 +127,9 @@
           <li data-target="#carousel-1" data-slide-to="1"></li>
           <li data-target="#carousel-1" data-slide-to="2"></li>
           <li data-target="#carousel-1" data-slide-to="3"></li>
-          <li data-target="#carousel-1" data-slide-to="4"></li>
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="img-fluid" src="assets/img/index/moon.jpg" alt="1" />
-            <div class="carousel-caption">
-              <h3>Moon</h3>
-              <p>Moon</p>
-            </div>
-          </div>
-          <div class="carousel-item">
             <img class="img-fluid" src="assets/img/index/mercury.jpg" alt="2" />
             <div class="carousel-caption">
               <h3>Mercury</h3>
@@ -179,7 +171,105 @@
       <a href="#tab"> MORE <i class="fas fa-angle-down"></i> </a>
     </div>
     <div class="ten-thing-home">
-      <p>hihi</p>
+      <div class="row container">
+        <div class="col-12 title-ten-thing-home">
+          <div style="display: flex; justify-content: center">
+            <p style="font-weight: 600; color: cornflowerblue; font-size: 16px">
+              10 THINGS
+            </p>
+
+            <span style="font-weight: 600; padding-left: 5px"> May 6 </span>
+          </div>
+          <h1>The Roundup</h1>
+          <p>The latest from around your galactic neighborhood.</p>
+        </div>
+
+        <div class="card-ten-thing col-lg-4 col-sm-6">
+          <div class="img">
+            <img
+              class="img-fluid"
+              src="http://solarsystem.nasa.gov/system/feature_items/images/611_AAPI-Screenshot-800x600.jpg"
+              alt=""
+            />
+          </div>
+          <div class="decription">
+            <h1>1</h1>
+            <p>
+              NASA Celebrates Asian American, Pacific Islander Heritage Month
+            </p>
+          </div>
+        </div>
+        <div class="card-ten-thing col-lg-4 col-sm-6">
+          <div class="img">
+            <img
+              class="img-fluid"
+              src="https://solarsystem.nasa.gov/system/feature_items/images/637_PIA24642_Ingenuity_Flight_Four_043021-800x600.jpg"
+              alt=""
+            />
+          </div>
+          <div class="decription">
+            <h1>2</h1>
+            <p>Ingenuity Completes Fourth Flight; Gets New Mission</p>
+          </div>
+        </div>
+        <div class="card-ten-thing col-lg-4 col-sm-6">
+          <div class="img">
+            <img
+              class="img-fluid"
+              src="https://solarsystem.nasa.gov/system/feature_items/images/714_wispr_venus_image_800x600.jpg"
+              alt=""
+            />
+          </div>
+          <div class="decription">
+            <h1>3</h1>
+            <p>
+              Parker Solar Probe Discovers Natural Radio Emission in Venus'
+              Atmosphere
+            </p>
+          </div>
+        </div>
+        <div class="card-ten-thing col-lg-4 col-sm-6">
+          <div class="img">
+            <img
+              class="img-fluid"
+              src="https://solarsystem.nasa.gov/system/feature_items/images/569_moxie_being_installed_in_perseverance-800x600.jpg"
+              alt=""
+            />
+          </div>
+          <div class="decription">
+            <h1>4</h1>
+            <p>Perseverance Extracts First Oxygen from Red Planet</p>
+          </div>
+        </div>
+        <div class="card-ten-thing col-lg-4 col-sm-6">
+          <div class="img">
+            <img
+              class="img-fluid"
+              src="https://solarsystem.nasa.gov/system/feature_items/images/566_atmospheric_rivers-800x600.gif"
+              alt=""
+            />
+          </div>
+          <div class="decription">
+            <h1>5</h1>
+            <p>In a First, Scientists Map Particle-Laden Rivers in the Sky</p>
+          </div>
+        </div>
+        <div class="card-ten-thing col-lg-4 col-sm-6">
+          <div class="img">
+            <img
+              class="img-fluid"
+              src="https://solarsystem.nasa.gov/system/feature_items/images/563_Lunar_Crater_Radio_Telescope-800x600.jpg"
+              alt=""
+            />
+          </div>
+          <div class="decription">
+            <h1>6</h1>
+            <p>
+              Lunar Crater Radio Telescope: Illuminating the Cosmic Dark Ages
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="feature-home">
       <div class="feature-content container">
