--- a/index.html
+++ b/index.html
@@ -130,31 +130,51 @@
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="img-fluid" src="assets/img/index/mercury.jpg" alt="2" />
-            <div class="carousel-caption">
-              <h3>Mercury</h3>
-              <p>Mercury</p>
+            <video class="img-fluid" autoplay loop muted>
+              <source
+                src="assets/video/home/Mercury-720x420.mp4"
+                type="video/mp4"
+              />
+            </video>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="img-fluid" src="assets/img/index/venus.jpg" alt="3" />
-            <div class="carousel-caption">
-              <h3>Venus</h3>
-              <p>Venus</p>
+            <video class="img-fluid" autoplay loop muted>
+              <source
+                src="assets/video/home/Venus-720x420.m4v"
+                type="video/mp4"
+              />
+            </video>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/img/index/Earth.jpg" alt="4" />
-            <div class="carousel-caption">
-              <h3>Earth</h3>
-              <p>Earth</p>
+            <video class="img-fluid" autoplay loop muted>
+              <source
+                src="assets/video/home/Earth-720x420.m4v"
+                type="video/mp4"
+              />
+            </video>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/img/index/mars.jpg" alt="5" />
-            <div class="carousel-caption">
-              <h3>Mars</h3>
-              <p>Mars</p>
+            <video class="img-fluid" autoplay loop muted>
+              <source
+                src="assets/video/home/Mars-720x420.m4v"
+                type="video/mp4"
+              />
+            </video>
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
         </div>
@@ -188,64 +208,59 @@
           <div class="img">
             <img
               class="img-fluid"
-              src="http://solarsystem.nasa.gov/system/feature_items/images/611_AAPI-Screenshot-800x600.jpg"
+              src="assets/img/ten-thing-home/569_Ingenuity_Flight_Four_Cropped.gif"
               alt=""
             />
           </div>
           <div class="decription">
             <h1>1</h1>
-            <p>
-              NASA Celebrates Asian American, Pacific Islander Heritage Month
-            </p>
+            <p>Perseverance Captures Video, Audio of Fourth Ingenuity Flight</p>
           </div>
         </div>
         <div class="card-ten-thing col-lg-4 col-sm-6">
           <div class="img">
             <img
               class="img-fluid"
-              src="https://solarsystem.nasa.gov/system/feature_items/images/637_PIA24642_Ingenuity_Flight_Four_043021-800x600.jpg"
+              src="assets/img/ten-thing-home/638_SWOT_illustration-800x600.jpg"
               alt=""
             />
           </div>
           <div class="decription">
             <h1>2</h1>
-            <p>Ingenuity Completes Fourth Flight; Gets New Mission</p>
+            <p>Cutting-Edge SWOT Satellite to Survey the World's Water</p>
           </div>
         </div>
         <div class="card-ten-thing col-lg-4 col-sm-6">
           <div class="img">
             <img
               class="img-fluid"
-              src="https://solarsystem.nasa.gov/system/feature_items/images/714_wispr_venus_image_800x600.jpg"
+              src="assets/img/ten-thing-home/615_OSIRIS-REx-MOM-800x600.jpg"
               alt=""
             />
           </div>
           <div class="decription">
             <h1>3</h1>
-            <p>
-              Parker Solar Probe Discovers Natural Radio Emission in Venus'
-              Atmosphere
-            </p>
+            <p>OSIRIS-REx 'MOM' Says Bittersweet Goodbye to Asteroid Bennu</p>
           </div>
         </div>
         <div class="card-ten-thing col-lg-4 col-sm-6">
           <div class="img">
             <img
               class="img-fluid"
-              src="https://solarsystem.nasa.gov/system/feature_items/images/569_moxie_being_installed_in_perseverance-800x600.jpg"
+              src="assets/img/ten-thing-home/565_potw2117a_Hubble_Necklace_Nebula-800x600.jpg"
               alt=""
             />
           </div>
           <div class="decription">
             <h1>4</h1>
-            <p>Perseverance Extracts First Oxygen from Red Planet</p>
+            <p>A Dazzling Cosmic Necklace</p>
           </div>
         </div>
         <div class="card-ten-thing col-lg-4 col-sm-6">
           <div class="img">
             <img
               class="img-fluid"
-              src="https://solarsystem.nasa.gov/system/feature_items/images/566_atmospheric_rivers-800x600.gif"
+              src="assets/img/ten-thing-home/566_atmospheric_rivers-800x600.gif"
               alt=""
             />
           </div>
@@ -258,7 +273,7 @@
           <div class="img">
             <img
               class="img-fluid"
-              src="https://solarsystem.nasa.gov/system/feature_items/images/563_Lunar_Crater_Radio_Telescope-800x600.jpg"
+              src="assets/img/ten-thing-home/563_Lunar_Crater_Radio_Telescope-800x600.jpg"
               alt=""
             />
           </div>
