--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
     </div>
 
     <div class="more-bar more-bar-overview">
-      <a href="#tab"> MORE <i class="fas fa-angle-down"></i> </a>
+      <a href="#ten-thing-home"> MORE <i class="fas fa-angle-down"></i> </a>
     </div>
-    <div class="ten-thing-home">
+    <div id="ten-thing-home" class="ten-thing-home">
       <div class="row container">
         <div class="col-12 title-ten-thing-home">
           <div style="display: flex; justify-content: center">
