--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -867,49 +867,120 @@
         <div class="tab_wrap" style="display: none">
           <div class="tab_content">
             <!-- Gallery -->
-            <div class="content-gallery">
-              <div class="row">
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                  <img
-                    src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
-                    alt=""
-                  />
+            <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">
+              Gallery
+            </h1>
 
-                  <img
-                    src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
-                    alt=""
-                  />
-                </div>
+            <hr class="mt-2 mb-5" />
 
-                <div class="col-lg-4 mb-4 mb-lg-0">
+            <div class="row text-center text-lg-left">
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
                   <img
-                    src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/pWkk7iiCoDM/400x300"
                     alt=""
                   />
-
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
                   <img
-                    src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/aob0ukAYfuI/400x300"
                     alt=""
                   />
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0">
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
                   <img
-                    src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/EUfxH-pze7s/400x300"
                     alt=""
                   />
-
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
                   <img
-                    src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
-                    class="w-100 shadow-1-strong rounded mb-4"
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/M185_qYH8vg/400x300"
                     alt=""
                   />
-                </div>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/sesveuG_rNo/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/AvhMzHwiE_0/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/2gYsZUmockw/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/EMSDtjVHdQ8/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/8mUEy0ABdNE/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/G9Rfc1qccH4/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/aJeH0KcFkuc/400x300"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-12">
+                <a href="#" class="d-block mb-4 h-100">
+                  <img
+                    class="img-fluid img-thumbnail"
+                    src="https://source.unsplash.com/p2TQ-3Bh3Oo/400x300"
+                    alt=""
+                  />
+                </a>
               </div>
             </div>
             <!-- Gallery -->
